--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cli-spinner": "^0.2.10",
     "colors": "^1.4.0",
     "dayjs": "^1.8.27",
+    "dotenv": "^8.2.0",
     "inquirer": "^7.1.0",
     "puppeteer": "^3.1.0",
     "treekill": "^1.0.0"
