--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
-    "token": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
-    "exec": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe"
+    "auth_token": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "exec": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe",
+    "game": "valorant"
 }
