--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "idle-twitch",
+  "name": "idleTwitch",
   "version": "1.0.0",
   "description": "A simple idle twitch bot for drops.",
   "main": "app.js",
+  "author": "Flickery",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cli-spinner": "^0.2.10",
@@ -11,11 +12,15 @@
     "dotenv": "^8.2.0",
     "inquirer": "^7.1.0",
     "puppeteer": "^3.1.0",
-    "treekill": "^1.0.0"
+    "puppeteer-core": "^3.1.0",
+    "tree-kill": "^1.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nexe": "^3.3.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "build": "nexe"
   },
   "repository": {
     "type": "git",
