--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "auth_token": "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX",
+    "auth_token": "h9nbkwcbyznuxzo6x9vmd22gtiadv7",
     "exec": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\chrome.exe",
-    "game": "valorant"
+    "game": "war thunder"
 }
