--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A simple idle twitch bot for drops.",
   "main": "app.js",
-  "author": "",
+  "author": "AlexSimpler",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "cli-spinner": "^0.2.10",
